# quark

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
examples/: test.rs
src/: database.rs  lib.rs  main.rs  main.rs.disabled
src/events/: client.rs  impl.rs  mod.rs  state.rs  strip.rs
src/impl/: mod.rs
src/impl/dummy/: mod.rs  simple.rs
src/impl/dummy/admin/: migrations.rs  simple.rs
src/impl/dummy/autumn/: attachment.rs
src/impl/dummy/channels/: channel.rs  channel_invite.rs  channel_unread.rs  message.rs
src/impl/dummy/servers/: server.rs  server_ban.rs  server_member.rs
src/impl/dummy/users/: bot.rs  user.rs  user_settings.rs
src/impl/generic/: mod.rs  simple.rs
src/impl/generic/autumn/: attachment.rs
src/impl/generic/channels/: channel.rs  channel_invite.rs  message.rs
src/impl/generic/servers/: server.rs  server_member.rs
src/impl/generic/users/: bot.rs  user.rs  user_settings.rs
src/impl/mongo/: mod.rs
src/impl/mongo/admin/: migrations.rs  simple.rs
src/impl/mongo/admin/migrations/: init.rs  scripts.rs
src/impl/mongo/autumn/: attachment.rs
src/impl/mongo/channels/: channel.rs  channel_invite.rs  channel_unread.rs  message.rs
src/impl/mongo/servers/: server.rs  server_ban.rs  server_member.rs
src/impl/mongo/users/: bot.rs  user.rs  user_settings.rs
src/models/: mod.rs
src/models/admin/: migrations.rs  simple.rs
src/models/autumn/: attachment.rs
src/models/channels/: channel.rs  channel_invite.rs  channel_unread.rs  message.rs
src/models/servers/: server.rs  server_ban.rs  server_member.rs
src/models/users/: bot.rs  user.rs
src/permissions/: mod.rs
src/permissions/defn/: channel.rs  mod.rs  permission.rs  server.rs  user.rs
src/permissions/impl/: channel.rs  mod.rs  permission.rs  server.rs  user.rs
src/presence/: entry.rs  mod.rs  operations.rs
src/tasks/: ack.rs  last_message_id.rs  mod.rs  process_embeds.rs  web_push.rs
src/traits/: mod.rs
src/traits/admin/: simple.rs
src/traits/autumn/: attachment.rs
src/traits/channels/: channel.rs  channel_invite.rs  channel_unread.rs  message.rs
src/traits/servers/: server.rs  server_ban.rs  server_member.rs
src/traits/users/: bot.rs  user.rs  user_settings.rs
src/types/: january.rs  mod.rs  push.rs
src/util/: date.rs  manipulation.rs  mod.rs  ref.rs  result.rs
