[package]
name = "revolt-quark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mongo = [ "mongodb" ]
rocket_impl = [ "rocket" ]
test = [ "async-std", "mongo", "mongodb/async-std-runtime", "rocket_impl", "rauth" ]
default = [ "test" ]

[dependencies]
# Serialisation
optional_struct = { git = "https://github.com/insertish/OptionalStruct", rev = "2011de17db6ecb210fddabe3d79ade865efaf4ee" }
serde = { version = "1", features = ["derive"] }
validator = { version = "0.14", features = ["derive"] }
bson = { version = "2.1.0", features = ["chrono-0_4"] }

# Databases
mongodb = { optional = true, version = "2.1.0", default-features = false }

# Async
futures = "0.3.19"
async-trait = "0.1.51"
async-std = { version = "1.8.0", features = ["attributes"], optional = true }

# Logging
log = "0.4"

# Util
ops = "0.6.0"
ulid = "0.5.0"
nanoid = "0.4.0"
impl_ops = "0.1.1"
num_enum = "0.5.6"
bitfield = "0.13.2"
lazy_static = "1.4.0"

# Implementations
rauth = { optional = true, git = "https://github.com/insertish/rauth", rev = "501d445e7b42a1c229bfa88c01fa6415f4cb7992" }
rocket = { optional = true, version = "0.5.0-rc.1", default-features = false, features = ["json"] }
