[package]
name = "revolt-quark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mongo = [ "mongodb" ]
rocket_impl = [ "rocket" ]
test = [ "async-std", "mongo", "mongodb/async-std-runtime", "rocket_impl", "rauth" ]
default = [ "test" ]

[dependencies]
# Serialisation
serde = { version = "1", features = ["derive"] }
validator = { version = "0.14", features = ["derive"] }
optional_struct = { git = "https://github.com/insertish/OptionalStruct", rev = "b57e8e8e77db6e1a7f68c715d0d1760cb64feb0c" }

bincode = "1.3.3"
serde_json = "1.0.78"
bson = { version = "2.1.0", features = ["chrono-0_4"] }

# Databases
redis-kiss = { version = "0.1.3" }
mongodb = { optional = true, version = "2.1.0", default-features = false }

# Async
futures = "0.3.19"
async-trait = "0.1.51"
async-recursion = "1.0.0"
async-std = { version = "1.8.0", features = ["attributes"], optional = true }

# Logging
log = "0.4.14"
pretty_env_logger = "0.4.0"

# Util
ops = "0.6.0"
ulid = "0.5.0"
nanoid = "0.4.0"
dotenv = "0.15.0"
impl_ops = "0.1.1"
num_enum = "0.5.6"
bitfield = "0.13.2"
lazy_static = "1.4.0"

# Implementations
rauth = { optional = true, git = "https://github.com/insertish/rauth", rev = "501d445e7b42a1c229bfa88c01fa6415f4cb7992" }
rocket = { optional = true, version = "0.5.0-rc.1", default-features = false, features = ["json"] }
